    (LP: #546792).
  * Disable the context menu in the slideshow frame.  Thanks Dylan
    McCall!
  * Make sure the user we're not processing events before we've set up
    the language list in the KDE frontend (LP 528678).
  * Don't try to translate the greeter with the C locale.
  * Don't destroy the main window when the close button is pressed
    (LP: #543775).

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 25 Mar 2010 11:15:08 +0000

ubiquity (2.2.8) lucid; urgency=low

  * Set a wallpaper and cursor for the KDE frontend when in only-
    ubiquity mode (LP: #540933, LP: #540339).  Thanks Roman Shtylman!
  * Add a password strength meter (LP: #537995).
  * Modify the install progress window to match the new theme
    (LP: #538411).
  * Don't show the alpha warning in OEM mode when it's disabled.
  * Add translations for the locale's preferred time format and
    respective format string, as imported from gnome-panel
    (LP: #538156).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 24 Mar 2010 23:26:46 +0000

ubiquity (2.2.7) lucid; urgency=low

  [ Evan Dandrea ]
  * Add inactive labels to the user setup page (LP: #537986).
  * Fix KDE frontend's return_to_partitioning function.
  * Fix the KDE frontend's format button on the advanced partitioning
    page.
  * Assign resize_path before its used in the KDE frontend's PartAuto.
  * Set the keymap to a reasonable default when leaving the greeter
    (LP: #539255).
  * Change the timezone highlight around UTC+5, UTC+5.5, and UTC+8
    (LP: #368060).
  * Fix setting the window title when in automatic mode in the KDE
    frontend (LP: #541829).
  * Automatic update of included source packages: grub-installer
    1.49ubuntu8.
  * Update translations from Launchpad.

  [ Mario Limonciello ]
  * Return True for set_page, restoring UI only page functionality.
  * Quit plymouth before running ubiquity in noninteractive from the
    upstart job.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 23 Mar 2010 14:44:46 +0000
